src/objects/crms11__Bundle_Pricing__c.object
<CustomObject>
    <description>FlexPricer Bundle Price records manage data relating to product bundles.</description>
    <fields>
        <fullName>crms11__Bundle_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Bundle Product for which this Bundle is being created</inlineHelpText>
        <label>Bundle Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Bundle Contents</relationshipLabel>
        <relationshipName>Bundles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>crms11__Individual_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Individual Product that is part of this Bundle</inlineHelpText>
        <label>Individual Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contained within Bundles</relationshipLabel>
        <relationshipName>Individual_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>crms11__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>11</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Bundle Price</label>
    <listViews>
        <fullName>crms11__All</fullName>
        <columns>NAME</columns>
        <columns>crms11__Bundle_Product__c</columns>
        <columns>crms11__Individual_Product__c</columns>
        <columns>crms11__Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BPID-{00000}</displayFormat>
        <label>Bundle Price ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>